--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
   body {
     font-size: 1rem;
+    max-width: 80ch;
   }
 
   p span {
@@ -221,7 +222,7 @@ CI/CD, GitHub Actions, Linux, Bash<br />
 Grafana<br />
 <strong>Testing &amp; Methodologies:</strong> RSpec, Playwright,
 Postman, Test-Driven Development (TDD), Agile<br />
-<strong>Languages:</strong> English, Serbo-Croatian, Hungarian</p>
+<strong>Languages:</strong> English, Serbian, Hungarian</p>
 <h1 class="unnumbered" id="experience">Experience</h1>
 <p><strong>Senior Software Developer, Owner,</strong> <a
 href="https://emilosman.com">Osman Emil Kft.</a> – Szeged, Hungary
