--- a/index.html
+++ b/index.html
@@ -294,12 +294,16 @@ Telenor, Jamie Oliver, BRF S.A., Zsidai Group</p></li>
 features and improved responsive interfaces</p></li>
 </ul>
 <h1 class="unnumbered" id="projects">Projects</h1>
+<p><strong><a
+href="https://github.com/emilosman/rssr">rssr</a></strong></p>
 <ul>
-<li><p><strong><a href="https://github.com/emilosman/rssr">rssr</a>
--</strong> Wrote a performant Golang open-source RSS reader for the
+<li><p>Wrote a performant Golang open-source RSS reader for the
 terminal</p></li>
-<li><p><strong>Homelab -</strong> Architected Proxmox services, VMs and
-containers with stable uptime and fast deployments</p></li>
+</ul>
+<p><strong>Homelab</strong></p>
+<ul>
+<li><p>Architected Proxmox services, VMs and containers with stable
+uptime and fast deployments</p></li>
 <li><p>Implemented monitoring and observability with Prometheus and
 Grafana to control resource usage</p></li>
 <li><p>Created ZFS backups on TrueNAS with snapshot replication, tested
