--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@ Linux enthusiast, technical architect, and mentor thriving in complex,
 client-facing environments</p>
 </div>
 <h1 class="unnumbered" id="skills">Skills</h1>
-<p><strong>Programming:</strong> Golang, Ruby, Python, JavaScript,
+<p><strong>Programming:</strong> Golang, Ruby, JavaScript,
 TypeScript<br />
-<strong>Frameworks:</strong> Ruby on Rails, Bubble Tea, Next.js<br />
+<strong>Frameworks:</strong> Ruby on Rails, Bubble Tea<br />
 <strong>Databases:</strong> PostgreSQL, MongoDB<br />
 <strong>DevOps &amp; Cloud:</strong> Docker, Podman, Terraform, Ansible,
 CI/CD, GitHub Actions, Linux, Bash<br />
 <strong>Monitoring &amp; Observability:</strong> Prometheus,
 Grafana<br />
-<strong>Testing &amp; Methodologies:</strong> RSpec, Playwright,
-Postman, Test-Driven Development (TDD), Agile<br />
+<strong>Testing &amp; Methodologies:</strong> RSpec, Postman,
+Test-Driven Development (TDD), Agile<br />
 <strong>Languages:</strong> English, Serbian, Hungarian</p>
 <h1 class="unnumbered" id="experience">Experience</h1>
 <p><strong>Senior Software Developer, Owner,</strong> <a
